bugfix for bg images on mobile

--- a/css/style2.css
+++ b/css/style2.css
@@ -190,6 +190,7 @@ ul, ol {
     /*}*/
 /*}*/
 
+.bg-img2 .overlay,
 .bg-img .overlay {
     position: absolute;
     left: 0;
